  * Add <sys/stdint.h> (as #include stub).
  * Add _PATH_DEVZERO.
  * Split additions for libcrypt, libutil and libz into separate
    libraries.
  * Add getbootfile().
  * Add <ndbm.h> stub (for libgdbm).
  * Add <sys/file.h> (stub for <sys/kglue/sys/file.h>).
  * Add <sys/user.h> and <sys/proc.h>.
  * Add _PATH_UUCPLOCK (diverge from upstream as per FHS).
  * Add mac_set family of functions.

 -- Robert Millan <rmh@debian.org>  Sat, 23 Nov 2013 20:57:05 +0100

freebsd-glue (0.1.14) unstable; urgency=low

  * Redirect to native <machine/elf.h> on kFreeBSD.
  * Build get_elf_arch.c using -Wall -Werror. Fix missing return and
    implicit declarations.

 -- Robert Millan <rmh@debian.org>  Wed, 30 Oct 2013 00:04:50 +0100

freebsd-glue (0.1.13) unstable; urgency=low

  * Disable kernel-specific paths on non-kFreeBSD.
  * Add <osreldate.h> and <sys/limits.h>.
  * Add STAILQ_LAST() to <sys/queue.h>.
  * Move CFLAGS to src/Makefile.
  * Expand <sys/elf32.h> and <sys/elf64.h> to support non-kFreeBSD
    platforms.
  * Add <machine/elf.h> (with tricky build magic to generate ELF_ARCH).

 -- Robert Millan <rmh@debian.org>  Mon, 28 Oct 2013 23:10:03 +0100

freebsd-glue (0.1.12) unstable; urgency=low

  * Fix improper allocation in funopen(). (Closes: #726970)
  * Add _PATH_UFSSUSPEND.
  * Add arc4random_stir() prototype (for libbsd).
  * Work around broken macro argument in TAILQ_FOREACH_REVERSE_SAFE

 -- Robert Millan <rmh@debian.org>  Sat, 26 Oct 2013 16:09:29 +0200

freebsd-glue (0.1.11) unstable; urgency=low

  * Fix unresolved dependencies on libc hidden symbols (_open, _read,
    _close), libdb and cpuset family of functions.
  * Add zlib1g-dev to Build-Depends and Depends.
  * getosreldate.c: Move mib and size to kFreeBSD-specific area.

 -- Robert Millan <rmh@debian.org>  Sun, 20 Oct 2013 15:14:22 +0200

freebsd-glue (0.1.10) unstable; urgency=low

  * Add libdb-dev to Depends / Build-Depends.

 -- Robert Millan <rmh@debian.org>  Sun, 20 Oct 2013 12:56:14 +0200
